# mirror-machine

./: CHANGELOG.md  README.md  domains.yaml  mkdocs.yml  pyproject.toml
docs/: api.md  cli.md  index.md
src/mirror_machine/: __init__.py  cli.py  core.py  entropy_table_bridge.py
tests/: test_cli.py  test_core.py
