[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirror-machine"
version = "0.1.0"
description = "Theoretical Mirror Framework for the GenesisAeon stack – self-referential loops, consciousness phase transitions and Mirror Principle simulation."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "GenesisAeon Team", email = "team@genesisaeon.org"}]
keywords = ["mirror", "consciousness", "phase-transition", "self-referential", "genesisaeon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "numpy>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
stack = [
    "climate-dashboard>=0.1.0",
    "sonification>=0.1.0",
    "mandala-visualizer>=0.1.0",
    "utac-core>=0.1.0",
    "sigillin>=0.1.0",
    "fieldtheory>=0.1.0",
    "cosmic-moment>=0.1.0",
    "medium-modulation>=0.1.0",
    "entropy-governance>=0.1.0",
    "entropy-table>=1.0.1",
    "implosive-genesis>=0.4.0",
]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.9"]
docs = ["mkdocs>=1.6", "mkdocstrings[python]>=0.27", "mkdocs-material>=9.6"]

[project.scripts]
mirror = "mirror_machine.cli:app"

[project.urls]
Repository = "https://github.com/GenesisAeon/mirror-machine"
Issues = "https://github.com/GenesisAeon/mirror-machine/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mirror_machine"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=mirror_machine --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
